[gd_scene format=3 uid="uid://cc7cgdienbn6n"]

[ext_resource type="Script" uid="uid://b8tvir5thnydr" path="res://Scripts/menu_inicial.gd" id="1_3acvs"]
[ext_resource type="AudioStream" uid="uid://c5u1xrmwm7ggn" path="res://Songs/menu.mp3" id="2_g2wv3"]

[node name="Menu" type="Control" unique_id=665432126]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3acvs")

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=847370613]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 69.99
offset_top = -186.405
offset_right = 163.99008
offset_bottom = -50.40381
grow_vertical = 0

[node name="BotaoIniciar" type="Button" parent="VBoxContainer" unique_id=1396761849]
layout_mode = 2
text = "Iniciar Jogo"

[node name="BotaoCreditos" type="Button" parent="VBoxContainer" unique_id=1604184418]
layout_mode = 2
text = "Créditos"

[node name="BotaoConfig" type="Button" parent="VBoxContainer" unique_id=1035138541]
layout_mode = 2
text = "Opções"

[node name="BotaoSair" type="Button" parent="VBoxContainer" unique_id=1331413752]
layout_mode = 2
text = "Sair"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="." unique_id=734880451]
stream = ExtResource("2_g2wv3")
autoplay = true

[connection signal="pressed" from="VBoxContainer/BotaoIniciar" to="." method="_on_botao_iniciar_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoCreditos" to="." method="_on_botao_creditos_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoConfig" to="." method="_on_botao_config_pressed"]
[connection signal="pressed" from="VBoxContainer/BotaoSair" to="." method="_on_botao_sair_pressed"]
